[gd_scene load_steps=2 format=3 uid="uid://dlo0o8o6r6mgv"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_dwl71"]

[node name="Pause_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dwl71")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 651.0
offset_bottom = 322.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Resume Game"
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Options"
text = "Options"

[node name="Return_To_MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Return to Main Menu"
text = "Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Return_To_MainMenu" to="." method="_on_return_to_main_menu_pressed"]
